vpc/vpc.tf
# AWS Resource block for creating VPC. 
resource "aws_vpc" "main_vpc" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "cp-${var.m_batch}-vpc"
  }
}
